@startuml

title __UTILS's Class Diagram__\n

  namespace com.kedacom.vconf.sdk.utils {
    class com.kedacom.vconf.sdk.utils.BuildConfig {
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    class com.kedacom.vconf.sdk.utils.BuildConfig {
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace collection {
      class com.kedacom.vconf.sdk.utils.collection.CompatibleConcurrentLinkedDeque {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace json {
      class com.kedacom.vconf.sdk.utils.json.Enum2CustomValueJsonAdapter {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace json {
      class com.kedacom.vconf.sdk.utils.json.Enum2IntJsonAdapter {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace json {
      class com.kedacom.vconf.sdk.utils.json.Kson {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace json {
      abstract class com.kedacom.vconf.sdk.utils.json.LameJsonAdapter {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace lang {
      class com.kedacom.vconf.sdk.utils.lang.IntegerHelper {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace lang {
      class com.kedacom.vconf.sdk.utils.lang.PrimitiveTypeHelper {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace lang {
      class com.kedacom.vconf.sdk.utils.lang.StringHelper {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace lifecycle {
      interface com.kedacom.vconf.sdk.utils.lifecycle.ILifecycleOwner {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace lifecycle {
      class com.kedacom.vconf.sdk.utils.lifecycle.ListenerLifecycleObserver {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace log {
      class com.kedacom.vconf.sdk.utils.log.KLog {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace math {
      class com.kedacom.vconf.sdk.utils.math.MatrixHelper {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace net {
      class com.kedacom.vconf.sdk.utils.net.NetAddrHelper {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace net {
      class com.kedacom.vconf.sdk.utils.net.NetworkHelper {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace view {
      class com.kedacom.vconf.sdk.utils.view.DefaultTouchListener {
      }
    }
  }
  

  namespace com.kedacom.vconf.sdk.utils {
    namespace view {
      class com.kedacom.vconf.sdk.utils.view.DensityHelper {
      }
    }
  }
  

  com.kedacom.vconf.sdk.utils.collection.CompatibleConcurrentLinkedDeque .up.|> java.lang.Iterable
  com.kedacom.vconf.sdk.utils.collection.CompatibleConcurrentLinkedDeque .up.|> java.util.Collection
  com.kedacom.vconf.sdk.utils.json.Enum2CustomValueJsonAdapter .up.|> com.google.gson.TypeAdapterFactory
  com.kedacom.vconf.sdk.utils.json.Enum2IntJsonAdapter .up.|> com.google.gson.TypeAdapterFactory
  com.kedacom.vconf.sdk.utils.json.LameJsonAdapter .up.|> com.google.gson.JsonDeserializer
  com.kedacom.vconf.sdk.utils.lifecycle.ListenerLifecycleObserver .up.|> androidx.lifecycle.DefaultLifecycleObserver
  com.kedacom.vconf.sdk.utils.lifecycle.ListenerLifecycleObserver o-- com.kedacom.vconf.sdk.utils.lifecycle.ListenerLifecycleObserver.Callback : cb
  com.kedacom.vconf.sdk.utils.view.DefaultTouchListener .up.|> android.view.View.OnTouchListener
  com.kedacom.vconf.sdk.utils.view.DefaultTouchListener o-- com.kedacom.vconf.sdk.utils.view.DefaultTouchListener.IOnEventListener : onEventListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
